--- a/web/public/css/style_index.css
+++ b/web/public/css/style_index.css
@@ -1,6 +1,7 @@
 /*Formatação da navbar*/
 /* Cor de fundo rgb(241, 241, 241) */
 
+
 html{    
     background-color: white;
 }
@@ -14,6 +15,15 @@ body{
     width: 100%;
     background-color: white;
     border-bottom: 1px solid black;
+    font-family: 'Lalezar';
+    font-size: 3vh;
+}
+
+.header a{
+    font-family: 'Lalezar';
+    font-size: 3vh;
+    color: black;
+    text-decoration: none;
 }
 
 .container {
@@ -22,9 +32,38 @@ body{
     margin: auto;
 }
 
+.esquerda_header{
+    display: flex;
+    justify-content: center;   
+}
+
+.logo{
+    height: 12vh;
+}
+
 .header .container {
     justify-content: space-between;
     align-items: center;
+}
+
+.direita_header{
+    width: 34vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.linka{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 5vh;
+    width: 8.5vw;
+}
+
+.linka:hover{
+    background-color: rgb(111, 167, 167);
+    border-radius: 5vh 5vh 5vh;    
 }
 
 .conta{
@@ -39,15 +78,18 @@ body{
 }
 
 .imagem_usuario{
-    height: 5vh;
+    height: 6vh;
+    border-radius: 5vh;
 }
 
 .links_navbar{
     display: flex;
+    justify-content: center;
 }
 
 hr{
     border: 1px solid black;
+    width: 100%;
 }
 
 li{
@@ -77,7 +119,7 @@ ul {
     justify-content: center;
     align-items: center;
     gap: 12vh;
-    background-color: rgb(229, 250, 250);
+    background-color: #E4F1F1;
     width: 100%;
     height: 80vh;
     background-size:cover;
@@ -107,7 +149,7 @@ ul {
     border-radius: 100%;
     float: left;
     overflow: hidden;
-    background-color: rgb(51, 102, 102);
+    background-color: #779A9B;
     margin-left: 1vw;
 }
 
@@ -126,11 +168,11 @@ ul {
     justify-content: center;
     align-items: center;
     gap: 12vh;
-    background-color: rgb(229, 250, 250);
+    background-color: #E4F1F1;
     width: 100%;
     height: 80vh;
     background-size:cover;
-    border-bottom: 1vh solid white;
+    border-bottom: 1vh solid #A0C5C7;
     border-top: 1vh solid white;
 }
 
@@ -150,8 +192,19 @@ ul {
 .footer {
     display: flex;
     width: 100%;
-    background-color: white;
-    border-bottom: 1px solid black;
+    height: 20vh;
+    background-color: #A0C5C7;
+}
+
+.footer .container{
+    height: 100%;
+}
+
+.direita_footer{
+    margin-top: 2vh;
+    height: 100%;
+    display: flex;
+    justify-content:start;
 }
 
 .footer .container {
