--- a/web/public/css/style_index.css
+++ b/web/public/css/style_index.css
@@ -1,6 +1,6 @@
 /*Formatação da navbar*/
 /* Cor de fundo rgb(241, 241, 241) */
-
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&display=swap');
 
 html{    
     background-color: white;
@@ -78,8 +78,12 @@ body{
 }
 
 .imagem_usuario{
-    height: 6vh;
-    border-radius: 5vh;
+    height: 4vh;
+    
+}
+
+.login_cliente {
+    font-size: '2vh';
 }
 
 .links_navbar{
@@ -89,7 +93,7 @@ body{
 
 hr{
     border: 1px solid black;
-    width: 100%;
+    width: 38vw;
 }
 
 li{
