--- a/web/public/css/style_mobile_footer_header.css
+++ b/web/public/css/style_mobile_footer_header.css
@@ -17,7 +17,7 @@ body{
 
 .header a{
     font-family: 'Lalezar';
-    font-size: 1.5vw;
+    font-size: 2.8vw;
     color: black;
     text-decoration: none;
 }
@@ -30,20 +30,22 @@ body{
 
 .esquerda_header{
     display: flex;
-    justify-content: center;
+    justify-content: center;   
 }
 
 .logo{
-    height: 10vw;
+    height: 12vw;
+    margin-right: 10vw;
 }
 
 .header .container {
-    justify-content: space-around;
+    justify-content:center;
+    gap: 10vw;
     align-items: center;
 }
 
 .direita_header{
-    width: 34vw;
+    width: 40vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -54,7 +56,7 @@ body{
     justify-content: center;
     align-items: center;
     height: 5vh;
-    width: 8.5vw;
+    width: 12vw;
 }
 
 .linka:hover{
@@ -88,6 +90,10 @@ body{
     justify-content: center;
 }
 
+.navbar{
+    padding-left: 0;
+}
+
 hr{
     border: 1px solid black;
     width: 38vw;
@@ -112,7 +118,7 @@ ul {
 .footer {
     display: flex;
     width: 100%;
-    height: 20vh;
+    height: 10vh;
     background-color: #A0C5C7;
 }
 
@@ -127,7 +133,7 @@ ul {
 }
 
 .direita_footer{
-    width: 10vw;
+    width: 20vw;
     height: 80%;
     display: flex;
     flex-direction: column;
@@ -137,6 +143,6 @@ ul {
 
 .direita_footer span{
     font-family: 'IBM Plex Sans Hebrew';
-    font-size: 2.2vh;
+    font-size: 2.2vw;
     text-align: center;
 }
