--- a/web/public/css/style_mobile_index.css
+++ b/web/public/css/style_mobile_index.css
@@ -16,7 +16,7 @@ body{
     justify-content: center;
     background-image: url(../img/banner1.png);
     width: 100%;
-    height: 80vh;
+    height: 55vh;
     background-size:cover;
     border-bottom: 1vh solid white;
     border-top: 1vh solid white;
@@ -40,7 +40,7 @@ body{
     background-color: #c4c4c4ad;
     backdrop-filter: blur(5px);
     width: 95%;
-    height: 50vh;
+    height: 35vh;
     border-radius: 2vh 2vh 2vh;
 }
 
@@ -75,7 +75,7 @@ body{
     align-items: center;
     background-color: #E4F1F1;
     width: 100%;
-    height: 80vh;
+    height: fit-content;
     background-size:cover;
     border-bottom: 1vh solid white;
     border-top: 1vh solid white;
@@ -97,7 +97,6 @@ body{
     text-align: center;
     margin-bottom: 3vh;
 }
-
 .produtos img{
     margin-top: 1vh;
 }
@@ -161,7 +160,7 @@ body{
 }
 
 .banner2_infocard{
-    width: 75%;
+    width: 90%;
     height: 80%;
     display: flex;
     flex-direction: column;
@@ -211,7 +210,7 @@ body{
     gap: 12vh;
     background-color: #E4F1F1;
     width: 100%;
-    height: 80vh;
+    height: fit-content;
     background-size:cover;
     border-bottom: 1vh solid #A0C5C7;
     border-top: 1vh solid white;
@@ -251,7 +250,7 @@ body{
 
 .valores{
     width: 27%;
-    height: 50vh;
+    height: 35vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -274,6 +273,7 @@ body{
 
 .sobre_buttons{
     width: 100%;
+    margin-bottom: 2vh;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -283,9 +283,9 @@ body{
 .sobre_buttons_1{
     margin-right: 3vw;
     font-family: 'Lalezar';
-    font-size: 6vw;
-    width: 70%;
-    height: 9vh;
+    font-size: 5vw;
+    width: 60%;
+    height: 5vh;
     border: none;
     border-radius: 1vh 1vh 1vh;
     background-color: #13D4DB;
@@ -293,42 +293,10 @@ body{
 
 .sobre_buttons_2{
     font-family: 'Lalezar';
-    font-size: 6vw;
-    width: 30%;
-    height: 9vh;
+    font-size: 5vw;
+    width: 40%;
+    height: 5vh;
     border: none;
     border-radius: 1vh 1vh 1vh;
     background-color: #00A9AF;
-}
-
-.footer {
-    display: flex;
-    width: 100%;
-    height: 20vh;
-    background-color: #A0C5C7;
-}
-
-.direita_footer img{
-    width: 3vw;
-}
-
-.footer .container{
-    height: 100%;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.direita_footer{
-    width: 10vw;
-    height: 80%;
-    display: flex;
-    flex-direction: column;
-    justify-content:start;
-}
-
-
-.direita_footer span{
-    font-family: 'IBM Plex Sans Hebrew';
-    font-size: 2.2vw;
-    text-align: center;
 }
