--- a/web/public/css/style_cadastro.css
+++ b/web/public/css/style_cadastro.css
@@ -70,16 +70,6 @@ li{
     display: flex;
 }
 
-.dropdown_content_1 button{
-    height: 4vh;
-    width: 10vw;
-    border: none;
-    border-radius: 2vh 2vh 2vh 2vh;
-    background-color: #00FFE0;
-    margin-right: 1vw;
-    margin-left: 1vw;
-}
-
 .dropdown_content_2{
     display: none;
     position: absolute;
@@ -100,8 +90,7 @@ li{
     display: flex;
 }
 
-
-.dropdown_content_2 button{
+.btn_inferiores{
     height: 4vh;
     width: 10vw;
     border: none;
@@ -109,6 +98,7 @@ li{
     background-color: #00FFE0;
     margin-right: 1vw;
     margin-left: 1vw;
+    cursor: pointer;
 }
 
 input{
@@ -144,4 +134,8 @@ input{
     background-color: #00FFE0;
     margin-right: 1vw;
     margin-left: 1vw;
+}
+
+.div_input {
+    padding: 1vh;
 }
