--- a/site/public/css/style_login.css
+++ b/site/public/css/style_login.css
@@ -17,74 +17,6 @@ body, html{
     height: 90%;
 }
 
-/* Header */
-
-header{
-    width: 100%;
-    height: 15%;
-    display: flex;
-    align-items: center;
-    /* background-color: red; */
-}
-
-.navbar{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.nav-logo{
-    width: 23%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.nav-items{
-    width:40%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.nav-buttons{
-    width: 23%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    font-size: 20px;
-    cursor: pointer;
-    font-weight: bold;
-}
-
-.nav-logo img{
-    width: 4rem;
-    height: 4rem;
-}
-
-.nav-ul{
-    display: flex;
-    justify-content: space-around;
-    list-style: none;
-    font-size: 20px;
-    font-weight: bold;
-    padding: 0;
-    width: 100%;
-}
-
-.nav-ul li{
-    cursor: pointer;
-    transition: .3s;
-}
-
-.nav-ul li:hover{
-    color: #24887c;
-    transition: .3s;
-}
-
 .btn{
     padding: .4rem;
     width: 7.5rem;
@@ -107,15 +39,17 @@ header{
     transition: .5s;
 }
 
+
 /* Main */
 
 main{
     width: 100%;
-    height: 85%;
+    height: 100%;
     display: flex;
     align-items: flex-start;
     justify-content: center;
-    background-color: #24887c;
+    background-image: url(../img/Image/fundo-cadastro-empresa.jpeg);
+    background-position: center;
 }
 
 main .container{
@@ -127,12 +61,13 @@ main .container{
 .form-area{
     width: 80%;
     height: 85%;
-    border-radius: .5rem;
+    border-radius: 3rem;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    background-color: white;
+    background-color: #f0f0f0;
+    box-shadow: -.5rem -.4rem 1rem gray;
 }
 
 .form-title{
@@ -178,6 +113,7 @@ main .container{
     height: 3rem;
     border-radius: .5rem;
     padding-left: .5rem;
+    border:none;
 }
 
 .block-title{
@@ -193,12 +129,10 @@ main .container{
 }
 
 .enterprise-info-block{
-    border-right: 5px solid #24887c;
     height:40%;
 }
 
 .admin-info-block{
-    border-right: 5px solid #24887c;
     height: 25%;
 }
 
