--- a/site/public/css/style_login.css
+++ b/site/public/css/style_login.css
@@ -7,6 +7,11 @@ body, html{
     margin: 0;
     width: 100vw;
     height: 100vh;
+    background-image: url(../assets/Image/fundo_cadastro_empresa_3.jpeg);
+    background-color: rgba(141, 141, 141, 0.507);
+    background-blend-mode: darken;
+    background-position: center;
+    background-size: cover;
 }
 
 .container{
@@ -26,19 +31,6 @@ body, html{
     font-size: 20px;
     font-weight: bold;
 }
-
-.btn-entrar{
-    background-color: #32BCAD;
-    border: none;
-    color: #f5f5f5;
-    transition: .5s;
-}
-
-.btn-entrar:hover{
-    background-color: #279487;
-    transition: .5s;
-}
-
 
 /* Main */
 
@@ -82,7 +74,7 @@ main .container{
     width: 100%;
     height: 5rem;
     justify-content: space-around;
-    align-items: end;
+    align-items: center;
 }
 
 .info-line h4{
@@ -133,14 +125,14 @@ main .container{
 
 .btn-enviar{
     width: 30%;
-    background-color: #32BCAD;
+    background-color: #279487;
     border: none;
     color: #f5f5f5;
     transition: .5s;
 }
 
 .btn-enviar:hover{
-    background-color: #279487;
+    background-color: #217c72;
     transition: .5s;
 }
 
