Atualizações para a tela de cadastro

--- a/site/public/dashboard/css/sb-admin-2.css
+++ b/site/public/dashboard/css/sb-admin-2.css
@@ -11771,3 +11771,9 @@ footer.sticky-footer .copyright {
 body.sidebar-toggled footer.sticky-footer {
   width: 100%;
 }
+
+.doughnut {
+  background-color: #093b29;
+}
+#myPieChart {
+}
