--- a/site/public/css/style_cadastro.css
+++ b/site/public/css/style_cadastro.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+header img {
+  width: 2rem;
+  height: auto;
+}
+
 body,
 html {
   padding: 0;
@@ -11,6 +16,10 @@ html {
   width: 100vw;
   height: 100vh;
   background-color: #32bcad;
+}
+
+p{
+  margin-top: 3rem;
 }
 
 .container {
@@ -31,6 +40,11 @@ html {
   font-weight: bold;
 }
 
+.form-area img {
+  width: 10em;
+  height: auto;
+}
+
 /* Main */
 
 main {
@@ -48,8 +62,8 @@ main .container {
 }
 
 .form-area {
-  width: 80%;
-  height: 85%;
+  width: 45rem;
+  height: 38rem;
 
   display: flex;
   flex-direction: column;
@@ -59,6 +73,9 @@ main .container {
   border-radius: 0.5rem;
   background-color: #ffffff;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+
+  padding: 60px 0;
+  overflow: hidden;
 }
 
 .info-block {
@@ -112,8 +129,9 @@ main .container {
 }
 
 .block-title h4 {
-  font-size: 20px;
-  /* font-weight: bold; */
+  font-size: 14px;
+  color: #9e9e9e;
+  padding-top: 1.5rem;
 }
 
 .enterprise-info-block {
@@ -132,25 +150,21 @@ main .container {
 }
 
 .btn-enviar {
-  /* width: 30%;
-  background-color: #279487;
-  border: none;
-  color: #f5f5f5;
-  transition: 0.5s; */
-
   border: none;
   border-radius: 0.2rem;
   letter-spacing: 1px;
-
+  font-size: 1.3rem;
+  
   cursor: pointer;
-
-  width: 100%;
-
+  
+  width: 40rem;
+  
   display: inline-block;
-
+  
   padding: 10px 28px 11px 28px;
   transition: 0.5s;
-
+  margin: 1rem;
+  
   color: #fff;
   background: #4b4b4d55;
 }
