Arrumando os aquivos css

--- a/site/public/dashboard/css/dashboardAnalista.css
+++ b/site/public/dashboard/css/dashboardAnalista.css
@@ -41,3 +41,44 @@
 .btnLimparFiltros:hover {
   background-color: #32bcad;
 }
+
+/*  Da v2 */
+
+.row {
+  margin-bottom: 30px;
+}
+
+select {
+  width: 15rem;
+  min-width: 10rem;
+
+  border: none;
+  border-radius: 0;
+  border-bottom: 1px solid black;
+  outline: 0;
+
+  background-color: transparent;
+
+  height: 30px;
+  font-size: 14px;
+  padding: 5px;
+  padding-left: 10px;
+
+  margin-left: 25px;
+}
+
+.cards_da_linha_02 {
+  height: 80px;
+}
+
+#recomendacoesHTML {
+  height: 200px;
+}
+
+.card_da_linha03 {
+  height: 80px;
+}
+
+.card_da_linha04 {
+  height: 360px;
+}
