--- a/site/public/dashboard/css/dashboardAnalista.css
+++ b/site/public/dashboard/css/dashboardAnalista.css
@@ -96,6 +96,19 @@
 
 /*  Da v2 */
 
+#chartArea {
+  height: auto;
+}
+
+#GraficoDeLinha {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+.card-body-grafico {
+  height: 100%;
+}
 .row {
   margin-bottom: 30px;
 }
@@ -123,8 +136,8 @@ select {
   height: 80px;
 }
 
-#recomendacoesHTML {
-  height: 200px;
+.alertas-laterais {
+  background-color: #000;
 }
 
 .texto_card_l3 {
