--- a/site/public/dashboard/css/dashboardAnalista.css
+++ b/site/public/dashboard/css/dashboardAnalista.css
@@ -94,8 +94,6 @@
   justify-content: space-evenly;
 }
 
-/*  Da v2 */
-
 #chartArea {
   height: auto;
 }
@@ -194,6 +192,34 @@ select {
   height: 100%;
 }
 
+.carrosel-de-alertas {
+  height: auto;
+
+  display: flex;
+  gap: 50px;
+}
+
+.testeDiv {
+  width: 100%;
+  height: auto;
+  padding: 5px;
+
+  border-radius: 5px;
+  background-color: #b9b9b923;
+
+  display: flex;
+  text-align: center;
+
+  flex-direction: column;
+
+  box-shadow: #00000027 5px 2.5px 15px;
+}
+
+.testeDiv p {
+  color: #000;
+  margin-top: 15px;
+}
+
 @media (max-width: 990px) {
   .row01 {
     align-items: flex-start;
@@ -210,6 +236,11 @@ select {
 
   .header-dash {
     width: 100%;
+  }
+
+  .carrosel-de-alertas {
+    flex-wrap: wrap;
+    height: auto;
   }
 }
 
