--- a/site/public/dashboard/css/dashboardAnalista.css
+++ b/site/public/dashboard/css/dashboardAnalista.css
@@ -49,9 +49,7 @@
 .calendario {
   display: flex;
   flex-direction: column;
-
-  height: 50%;
-  height: 40vh;
+  height: auto;
 }
 
 .diasDaSemana {
