--- a/site/public/dashboard/css/dashboardAnalista.css
+++ b/site/public/dashboard/css/dashboardAnalista.css
@@ -135,10 +135,13 @@ select {
   display: flex;
   flex-direction: column;
   justify-content: center;
+
+  text-align: left;
 }
 
 .recomendacaoMemoria {
   border-bottom: 10px !important;
+  padding-top: 0px !important;
 }
 
 .texto_card_l3 {
@@ -207,18 +210,56 @@ select {
   box-shadow: #00000027 5px 2.5px 15px;
 }
 
+#descriptionAlertCPU {
+  text-align: left;
+  padding-left: 20px;
+}
+
+#descriptionAlertMemory {
+  text-align: left;
+  padding-left: 20px;
+}
+
+#descriptionAlertDisc {
+  text-align: left;
+  padding-left: 20px;
+}
+
 .testeDiv p {
   color: #000;
   margin-top: 15px;
 }
 
 .jsCalendar-current {
-  color: #ffd500 !important;
+  color: #000000 !important;
   font-weight: 900 !important;
+  background-color: #3fffe982 !important;
 }
 
 .new-row {
   display: flex;
+}
+
+.alert {
+  color: #000000 !important;
+  padding-left: 0px !important;
+}
+
+.textCenter {
+  text-align: center !important;
+  padding-left: 0px !important;
+}
+
+.observation {
+  color: #4a4a4a;
+  font-weight: 800;
+  padding-left: 0px !important;
+}
+
+.safe {
+  color: #616161;
+  font-weight: 400;
+  padding-left: 0px !important;
 }
 
 .graph2 {
